<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_release_reminder"
        android:textColor="@color/colorTextBlack"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/switchReleaseReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/note_release_reminder"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_daily_reminder"
        android:textColor="@color/colorTextBlack"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/switchDailyReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_daily_reminder"
        android:textColor="@color/colorText" />

</LinearLayout>