<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:icon="@drawable/ic_search_black_24dp"-->
        <!--app:showAsAction="always|collapseActionView"-->
        <!--app:actionViewClass="androidx.appcompat.widget.SearchView"-->
        <!--android:title="@string/search_hint"/>-->

    <item android:id="@+id/action_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
         />

    <group android:menuCategory="container">

        <item android:id="@+id/theme"
            android:title="Dark"
            app:showAsAction="never" />

        <item android:id="@+id/language"
            android:title="@string/language"
            app:showAsAction="never" />

        <item android:id="@+id/setting"
            android:title="@string/setting"
            app:showAsAction="never" />

    </group>
</menu>