<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/cd_image_poster"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_date_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_overview"
            android:layout_toEndOf="@id/img_poster"
            android:background="@color/colorBackgroundDate"
            app:layout_constraintEnd_toEndOf="@+id/img_poster"
            app:layout_constraintStart_toStartOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            tools:text="Date Release" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster"
            app:layout_constraintEnd_toEndOf="@+id/img_poster"
            app:layout_constraintStart_toStartOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="@+id/img_poster" />

        <ProgressBar
            android:id="@+id/progressBarGenre"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_genre"
            app:layout_constraintStart_toStartOf="@+id/txt_genre"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_genre" />

        <TextView
            android:id="@+id/txt_overview"
            style="@style/TextContent.Overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            android:ellipsize="end"
            android:justificationMode="inter_word"
            android:maxLines="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_overview"
            tools:targetApi="o"
            tools:text="Detail Overview" />

        <TextView
            android:id="@+id/txt_genre"
            style="@style/TextContent.Overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_genre"
            tools:text="Genre" />

        <TextView
            android:id="@+id/txt_title_overview"
            style="@style/TextContent.TitleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_date_release"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/txt_title_genre"
            style="@style/TextContent.TitleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_overview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
